# webmention

./: CHANGELOG.md  Cargo.toml  README.md
src/: checking.rs  error.rs  html.rs  http_client.rs  lib.rs  link_header.rs  receiving.rs  sending.rs  storage.rs  webmention.rs  wm_url.rs
src/endpoint_discovery/: mod.rs  test.rs
