[package]
name = "webmention"
description = "Library and a CLI tool for sending and validation webmentions"
homepage = "https://marinintim.com/projects/webmention/"
repository = "https://github.com/marinintim/webmention.git"
readme = "./README.md"
version = "0.2.0"
authors = ["Tim Marinin <mt@marinintim.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["indieweb"]
categories = ["command-line-utilities", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = { version = "2.2", default-features = false, features = ["middleware-logger", "hyper-client"] }  # fetching and sending data
select = "0.5" # parsing HTML for data
serde = "1.0"
rocket = { version = "0.4.7", optional = true}
async-std = { version = "1.9", features = ["attributes"] }
thiserror = "1.0"
anyhow = "1.0"
http-types = "2.10"
nom = "6.1.2"
url = "2.2.1"
clap = { version = "2.33.3", optional = true}

[features]
default = []
cli = ["clap"]
receive = ["cli", "rocket"]
hyper = ["surf/hyper-client"]

[[bin]]
name = "webmention"
required-features = ["cli"]
