[package]
name = "webmention"
description = "Library and a CLI tool for sending and validation webmentions"
homepage = "https://marinintim.com/projects/webmention/"
repository = "https://github.com/marinintim/webmention.git"
readme = "./README.md"
version = "0.5.0"
authors = ["Tim Marinin <mt@marinintim.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["indieweb"]
categories = ["command-line-utilities", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP GET + POST
reqwest = { version = "0.11" }

# parsing HTML for data
select = "0.6"
url = { version = "2.2", features = ["serde"] } # working with URLs

# serializing + deserializing webmentions
serde = { version = "1", features = ["derive"] }

# public errors
thiserror = "1"

# wrapping errors
anyhow = "1"

nom = "7" # parsing Link header

# for web server
rocket = { version = "0.4.7", optional = true }

# for CLI
clap = { version = "2.33.3", optional = true }

tokio = { version = "1", optional = true, default-features = false }

[dev-dependencies]
tokio-test = "0.4.2"

[features]
default = []
cli = ["clap", "tokio", "tokio/rt", "tokio/macros"]
receive = ["cli", "rocket"]

[[bin]]
name = "webmention"
required-features = ["cli"]
